# copilotmemory

./: .env.example  .gitignore  LICENCE  README.md  pyproject.toml
docs/: architecture.md
src/copilotmemory/: __init__.py
src/copilotmemory/api/: routes.py
src/copilotmemory/cli/: commands.py
src/copilotmemory/memory/: __init__.py  embedder.py  retriever.py  store.py
src/copilotmemory/utils/: config.py  logger.py
tests/: test_memory.py
